# workfall-yew-forms

./: Cargo.toml  LICENSE-MIT  README.md  index.scss
src/: app.rs  main.rs
src/components/: input.rs
src/views/: home.rs
